Updated scoreboard to allow for ties when ranking players.  Updated Aggregators to match.